--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
       <table cellspacing="20">
           <tr>
               <td><img src="circle-cropped.png" alt="johanna profile picture" /></td>
-              <td><h1>Johanna Mittermeier</h1>
+              <td><h1>Johanna M.</h1>
             <p>
                 <em>Jr. Assistant <strong>Training Center</strong></em>
             </p>
             <p>
-                I am an assistant in the
-                <a href="https://start.docuware.com/de/">DocuWare</a> Training Center. I am currently studying Web Development.
+                I am an assistant in the DWTraining Center. I am currently studying Web Development.
             </p></td>
           </tr>
       </table>
@@ -36,11 +35,11 @@
         <tbody>
             <tr>
                 <td>2017-2019</td>
-                <td>Sales Assistant at Gestamp</td>
+                <td>Sales Assistant</td>
             </tr>
             <tr>
                 <td>2020</td>
-                <td>Jr. Assistant TrainingCenter at DocuWare</td>
+                <td>Jr. Assistant TrainingCenter</td>
             </tr>
         </tbody>
     </table>
